Test also the prefix value

We need to test if there is a prefix value because the file name can be
null and the prefix can have a value and in this case we don't reset
n.

REVIEW: 104068
BUG: 258737